[package]
name = "raiden-derive"
version = "0.1.0"
authors = ["bokuweb <bokuweb12@gmail.com>"]
edition = "2018"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
convert_case = "^0.6.0"
ident_case = "^1.0.1"
proc-macro2 = "^1.0.84"
quote = "^1.0.36"
syn = "^2.0.66"

[features]
default = ["rusoto"]
aws-sdk = []
rusoto = []
tracing = []
