[package]
name = "raiden-derive"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
convert_case = "^0.8.0"
ident_case = "^1.0.1"
proc-macro2 = "^1.0.95"
quote = "^1.0.40"
syn = "^2.0.104"

[features]
default = ["rusoto"]
aws-sdk = []
rusoto = []
tracing = []
