[package]
name = "raiden"
version = "0.1.0"
authors = ["bokuweb <bokuweb12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
again = "0.1"
aws-config = { version = "^1", optional = true }
aws-sdk-dynamodb = { version = "^1", optional = true }
aws-smithy-runtime-api = { version = "^1", optional = true }
base64 = "^0.21"
paste = { version = "1.0.14", optional = true }
raiden-derive = { version = "*", path = "../raiden-derive", default_features = false }
rusoto_core_default = { package = "rusoto_core", version = "0.48", optional = true }
rusoto_core_rustls = { package = "rusoto_core", version = "0.48", default_features = false, features = [
    "rustls",
], optional = true }
rusoto_credential = { version = "0.48", optional = true }
rusoto_dynamodb_default = { package = "rusoto_dynamodb", version = "0.48", features = [
    "serialize_structs",
], optional = true }
rusoto_dynamodb_rustls = { package = "rusoto_dynamodb", version = "0.48", default_features = false, features = [
    "rustls",
    "serialize_structs",
], optional = true }
rust-crypto = "^0.2.36"
safe-builder = { tag = "0.0.6", git = "https://github.com/raiden-rs/safe-builder.git" }
serde = { version = "^1", features = ["derive"] }
serde_derive = "^1"
serde_json = "^1"
thiserror = "^1"
tracing = { version = "0.1", optional = true }
uuid = { version = "^1.6", features = ["v4"] }


[dev-dependencies]
aws-credential-types = "1.0.1"
aws-smithy-runtime = { version = "^1" }
hyper-rustls = { version = "0.24", default-features = false, features = [
    "http1",
    "http2",
    "native-tokio",
] }
pretty_assertions = "1.4.0"
raiden = { path = "./", features = ["tracing"], default_features = false }
time = "0.3.30"
tokio = { version = "^1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }


[features]
default = ["rusoto"]
aws-sdk = [
    "dep:aws-config",
    "dep:aws-sdk-dynamodb",
    "dep:aws-smithy-runtime-api",
    "dep:paste",
    "raiden-derive/aws-sdk",
]
rusoto = [
    "dep:rusoto_core_default",
    "dep:rusoto_credential",
    "dep:rusoto_dynamodb_default",
    "raiden-derive/rusoto",
]
rusoto_rustls = [
    "dep:rusoto_core_rustls",
    "dep:rusoto_credential",
    "dep:rusoto_dynamodb_rustls",
    "raiden-derive/rusoto",
]
rustls = ["rusoto_rustls"]
tracing = ["dep:tracing", "raiden-derive/tracing"]
