[package]
name = "raiden"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
again = "^0.1.2"
base64 = "^0.22.1"
md-5 = "^0.10.6"
raiden-derive = { version = "*", path = "../raiden-derive" }
rusoto_core_default = { package = "rusoto_core", version = "0.48.0", optional = true }
rusoto_core_rustls = { package = "rusoto_core", version = "0.48.0", default-features = false, features = [
    "rustls",
], optional = true }
rusoto_credential = "0.48.0"
rusoto_dynamodb_default = { package = "rusoto_dynamodb", version = "0.48.0", features = [
    "serialize_structs",
], optional = true }
rusoto_dynamodb_rustls = { package = "rusoto_dynamodb", version = "0.48.0", default-features = false, features = [
    "rustls",
    "serialize_structs",
], optional = true }
safe-builder = { tag = "0.0.6", git = "https://github.com/raiden-rs/safe-builder.git" }
serde = { version = "^1.0.219", features = ["derive"] }
serde_derive = "^1.0.219"
serde_json = "^1.0.140"
thiserror = "^2.0.12"
tracing = { version = "^0.1.41", optional = true }
uuid = { version = "^1.16.0", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "^1.4.1"
raiden = { path = "./", features = ["tracing"], default-features = false }
time = "^0.3.41"
tokio = "^1.45.0"
tracing-subscriber = { version = "^0.3.19", features = ["env-filter", "time"] }

[features]
default = ["rusoto_core_default", "rusoto_dynamodb_default"]
rustls = ["rusoto_core_rustls", "rusoto_dynamodb_rustls"]
tracing = ["dep:tracing", "raiden-derive/tracing"]

[package.metadata.cargo-machete]
ignored = ["md-5"]
